# configmap-reader

./: .gitignore  Makefile  README.md  pyproject.toml  release.env  sonar-project.properties  tox.ini
.github/scripts/: prepare-docker.sh
.github/workflows/: build-docker-image.yml  build.yaml  deploy-pypi.yml  workflow-deployments.yml
docker/: Dockerfile  requirements.txt
docker/app/: main.py
kubernetes/: configmap.yaml  deployment.yaml  rbac.yaml  service.yaml
scripts/: set-version.sh
src/configmap_reader/: cli.py  config_api.py  config_dir.py  main.py
tests/: test_cli.py  test_config_api.py  test_config_dir.py  test_main.py
tests/expected-output/: cli-help.txt  cli-version.txt  cli-wrong-options.txt
