[project]
name = "configmap_reader"
version = "0.2.0"
description = "microservice to read and return content of a configmap"
authors = [
    {name = "Siak Hooi",email = "siakhooi@gmail.com"}
]
keywords = [ "kafka" ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities"
]

license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.123.9,<0.124.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "kubernetes (>=34.1.0,<35.0.0)"
]

[project.urls]
homepage = "https://github.com/siakhooi/configmap-reader"
repository = "https://github.com/siakhooi/configmap-reader"
documentation = "https://github.com/siakhooi/configmap-reader/wiki"
"Bug Tracker" = "https://github.com/siakhooi/configmap-reader/issues"

[project.scripts]
configmap-reader = 'configmap_reader.cli:run'


[tool.poetry]
packages = [{include = "configmap_reader", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
flake8 = "^7.2.0"
pytest-mock = "^3.15.1"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
